--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
       <button id="clr-btn">C</button>
       <button id="del">Del</button>
       <button id="div_10">%</button>
-      <button id="dvd">/</button>    
+      <button class="operator">/</button>    
       <button id="7">7</button>    
       <button id="8">8</button>    
       <button>9</button>    
-      <button>*</button>    
+      <button class="operator">*</button>    
       <button>4</button>    
       <button>5</button>    
       <button>6</button>    
-      <button>-</button>    
+      <button class="operator">-</button>    
       <button>1</button>    
       <button>2</button>    
       <button>3</button>    
-      <button>+</button>    
+      <button class="operator">+</button>    
       <button>.</button>    
       <button>0</button>    
-      <button>=</button>    
+      <button id="equal">=</button>    
    </div>
   </div>
 
